# promptory

./: .eslintrc.json  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: .env.template  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  controller.rs  domain.rs  handler.rs  infra.rs  lib.rs  main.rs  migrate.rs  usecase.rs
src-tauri/src/common/: dir.rs  errors.rs  logger.rs
src-tauri/src/common/thelper/: db.rs
src-tauri/src/controller/: chat.rs  comparing_prompt.rs  convert.rs  prompt_manager.rs
src-tauri/src/domain/: chat.rs  comparing_prompt.rs  comparing_prompt_setting.rs  prompt_manager.rs  settings.rs
src-tauri/src/handler/: greet_handler.rs
src-tauri/src/infra/: assistant.rs  chat.rs  core.rs  repository.rs
src-tauri/src/infra/core/: openai.rs  seaorm.rs
src-tauri/src/infra/repository/: comparing_prompt_run.rs  comparing_prompt_setting.rs  prompt_manager.rs  relation.rs  settings.rs
src-tauri/src/infra/repository/entities/: assistant_settings.rs  chat_settings.rs  comparing_prompt_chat_setting_details.rs  comparing_prompt_manager.rs  comparing_prompt_run_histories.rs  comparing_prompt_runs.rs  comparing_prompt_setting_versions.rs  comparing_prompt_settings.rs  comparing_prompt_vision_setting_details.rs  mod.rs  prelude.rs  prompt_manager.rs  prompt_manager_tag.rs  prompt_manger.rs  prompt_manger_versions.rs  runs.rs  (+6 more)
src-tauri/src/migration/: migrator.rs  mod.rs
src-tauri/src/migration/migrator/: m000001_init.rs
src-tauri/src/usecase/: chat.rs  comparing_prompt.rs  prompt_manager.rs
(+38 files in other folders)
