[package]
name = "promptory"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.16.3"
sea-orm = { version = "^0.12.0", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros"] }
sea-orm-migration = "^0.12.0"
tokio = "1.34.0"
futures = "0.3.28"
async-std = {version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
once_cell = "1.18.0"
log = "0.4.20"
env_logger = "0.10.1"
strum = "0.25.0"
strum_macros = "0.25.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
